--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
+    <!-- font-awesome icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/fontawesome.min.css">
-  
-  
   </head>
 
   <body>
     <div class="container-fluid">
       <div class="profileBlock">
+        <!-- About Me -->
         <div class="aboutMe">
           <div class="container">
             <div class="row">
@@ -50,6 +50,8 @@
             </div>
           </div>
         </div>
+
+        <!-- Skills -->
         <div class="container skillsBlock">
           <h2 class="heading2 pt-5 pb-2">Skills</h2>
           <div class="skillsDesc">
@@ -61,6 +63,8 @@
             <img src="images/mangodb.png" alt="mangodb">
           </div>
         </div>
+            
+        <!-- Hobbies -->
         <div class="container hobbiesBlock">
           <h2 class="heading2 pt-5 pb-2">Hobbies</h2>
           <div class="hobbiesDesc">
@@ -69,6 +73,8 @@
             <img src="images/listening-music.jpg" alt="music" title="Listening Music">
           </div>
         </div>
+
+        <!-- Location -->
         <div class="container locationBlock">
           <h2 class="heading2 pt-5 pb-2">Location</h2>
           <div class="locationMap">
@@ -79,6 +85,8 @@
           </div>
         </div>
         <hr class="horizontalLine" />
+
+        <!-- footer -->
         <footer>
           <div class="socialLinkBlock">
             <p class="socialLink">&copy; Nilkamal Appa Gilbile 2023</p>
