--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>My Profile</title>
 
   <!-- css style -->
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
 
   <!-- Google Fonts -->
   <!-- <link href="https://fonts.googleapis.com/css2?family=Finlandica:ital@1&family=Gugi&display=swap" rel="stylesheet"> -->
